--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,22 +1,25 @@
-{% extends 'base.html' %}
+{% extends 'blog/base.html' %}
 
 {% block content %}
 <h1>{{ post.title }}</h1>
 <p>{{ post.content }}</p>
 <p>Author: {{ post.author.username }}</p>
 <p>Published: {{ post.published_date|date:"Y-m-d H:i" }}</p>
+<p>Tags: 
+{% for tag in post.tags.all %}
+    <a href="{% url 'search-posts' %}?q={{ tag }}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}
+{% empty %}
+    No tags
+{% endfor %}
+</p>
 
 {% if user.is_authenticated and user == post.author %}
     <a href="{% url 'post-update' post.pk %}">Edit</a>
     <a href="{% url 'post-delete' post.pk %}">Delete</a>
 {% endif %}
 
-<a href="{% url 'post-list' %}">Back to all posts</a>
-{% endblock %}
-
 <hr>
 <h3>Comments</h3>
-
 {% for comment in post.comments.all %}
     <p><strong>{{ comment.author.username }}:</strong> {{ comment.content }} <small>({{ comment.created_at|date:"Y-m-d H:i" }})</small></p>
     {% if user.is_authenticated and user == comment.author %}
@@ -32,3 +35,6 @@
 {% else %}
     <p><a href="{% url 'login' %}">Login</a> to add a comment.</p>
 {% endif %}
+
+<a href="{% url 'post-list' %}">Back to all posts</a>
+{% endblock %}
