--- a/django_blog/blog/templates/blog/comment_form.html
+++ b/django_blog/blog/templates/blog/comment_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'blog/base.html' %}
 
 {% block content %}
 <h2>{% if form.instance.pk %}Edit Comment{% else %}Add Comment{% endif %}</h2>
