--- a/django_blog/blog/templates/blog/post_form.html
+++ b/django_blog/blog/templates/blog/post_form.html
@@ -1,24 +1,12 @@
-{% extends 'base.html' %}
+{% extends 'blog/base.html' %}
 
 {% block content %}
-<h1>
-    {% if form.instance.pk %}
-        Edit Post
-    {% else %}
-        Create New Post
-    {% endif %}
-</h1>
+<h1>{% if form.instance.pk %}Edit Post{% else %}Create New Post{% endif %}</h1>
 
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">
-        {% if form.instance.pk %}
-            Update
-        {% else %}
-            Create
-        {% endif %}
-    </button>
+    <button type="submit">{% if form.instance.pk %}Update{% else %}Create{% endif %}</button>
 </form>
 
 <a href="{% url 'post-list' %}">Back to all posts</a>
