--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -1,15 +1,20 @@
-{% extends 'base.html' %}
+{% extends 'blog/base.html' %}
 
 {% block content %}
 <h1>All Posts</h1>
 
-<a href="{% url 'post-create' %}">Create New Post</a>
-
 <ul>
     {% for post in posts %}
     <li>
-        <a href="{% url 'post-detail' post.pk %}">{{ post.title }}</a>
-        <small>by {{ post.author.username }} on {{ post.published_date|date:"Y-m-d H:i" }}</small>
+        <a href="{% url 'post-detail' post.pk %}">{{ post.title }}</a> 
+        by {{ post.author.username }} on {{ post.published_date|date:"Y-m-d H:i" }}
+        <br>
+        Tags: 
+        {% for tag in post.tags.all %}
+            <a href="{% url 'search-posts' %}?q={{ tag }}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}
+        {% empty %}
+            No tags
+        {% endfor %}
     </li>
     {% empty %}
     <li>No posts yet.</li>
