some changes of the practice of django thing

--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/librarian_view.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/librarian_view.html
@@ -3,6 +3,6 @@
 <head><title>Librarian View</title></head>
 <body>
     <h1>Welcome Librarian!</h1>
-    <p>You can manage library books.</p>
+    <p>You have access to manage library resources.</p>
 </body>
 </html>
