--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/member_view.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/member_view.html
@@ -3,6 +3,6 @@
 <head><title>Member View</title></head>
 <body>
     <h1>Welcome Member!</h1>
-    <p>You can view available books in the library.</p>
+    <p>You have access to view library resources.</p>
 </body>
 </html>
