--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/login.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/login.html
@@ -1,4 +1,5 @@
 <!-- login.html -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +14,6 @@
         {{ form.as_p }}
         <button type="submit">Login</button>
     </form>
-    <a href="{% url 'register' %}">Register</a>
+    <a href="{% url 'relationship_app:register' %}">Register</a>
 </body>
 </html>
