--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/logout.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/logout.html
@@ -1,4 +1,5 @@
 <!-- logout.html -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,7 @@
 </head>
 <body>
     <h1>You have been logged out</h1>
-    <a href="{% url 'login' %}">Login again</a>
+    <a href="{% url 'relationship_app:login' %}">Login again</a>
+    <a href="{% url 'relationship_app:register' %}">Register</a>
 </body>
 </html>
